console-chat/src/screens/snapshots/Console_Chat__screens__chat__tests__render_chat.snap
---
source: src/screens/chat.rs
expression: terminal.backend()
---
"╔══════════════════════════════════════════════════════════════════════════════╗"
"║                                  TODO List                                   ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║╭────────────────────────────────────────────────────────────────────────────╮║"
"║│Input                                                                       │║"
"║╰────────────────────────────────────────────────────────────────────────────╯║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
