console-chat/src/screens/snapshots/Console_Chat__screens__chat__tests__render_chat_long_msg.snap
---
source: src/screens/chat.rs
expression: terminal.backend()
---
"╔══════════════════════════════════════════════════════════════════════════════╗"
"║╭User1───────────────────────────────────────────────────────────────────────╮║"
"║│1                                                                           │║"
"║│Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod     │║"
"║│tempor incididunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut │║"
"║│enim aeque doleamus animo, cum corpore dolemus, fieri tamen permagna        │║"
"║│accessio potest, si aliquod aeternum et infinitum impendere malum nobis     │║"
"║│opinemur. Quod idem licet transferre in voluptatem, ut postea variari       │║"
"║│voluptas distinguique possit, augeri amplificarique non possit. At etiam    │║"
"║│Athenis, ut e patre audiebam facete et urbane Stoicos irridente, statua est │║"
"║│in quo a nobis philosophia defensa et collaudata est, cum id, quod maxime   │║"
"║│placeat, facere possimus, omnis voluptas assumenda est, omnis dolor         │║"
"║╰────────────────────────────────────────────────────────────────────────────╯║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║╭────────────────────────────────────────────────────────────────────────────╮║"
"║│Input                                                                       │║"
"║╰────────────────────────────────────────────────────────────────────────────╯║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
